DecoderStreamTraits: remove redundant explicit instantiation definitions

The template was already explicitly specialized with these types in the
header, so the instantiations here have no effect, and recent Clang
versions warn about it.

BUG=643235
R=thakis@chromium.org
TBR=chcunningham

Review URL: https://codereview.chromium.org/2305683002 .

Cr-Commit-Position: refs/heads/master@{#415999}

Former-commit-id: 36676ab3858596d6fa27ffeddd6055f44a8b38cd